	PR fortran/87725 	* openmp.c (gfc_match_omp_clauses): Parse simd, monotonic and 	nonmonotonic modifiers regardless of if they have been parsed 	already or if the opposite one has.  Fix up check whether 	comma after modifier should be parsed. 	(resolve_omp_clauses): Diagnose schedule modifier restrictions.

* c-c++-common/gomp/schedule-modifiers-1.c (bar): Separate modifier
	from kind with a colon rather than comma.
	* gfortran.dg/gomp/schedule-modifiers-1.f90: New test.
	* gfortran.dg/gomp/schedule-modifiers-2.f90: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@265479 138bc75d-0d04-0410-961f-82ee72b054a4